--- a/bbshome.html
+++ b/bbshome.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Laurent Essioux, Dominik Heinzmann, Kaspar Rufibach, Marcel Wolbers" />
 
-<meta name="date" content="2019-11-22" />
+<meta name="date" content="2019-11-28" />
 
 <title>Basel Biometric Section (BBS)</title>
 
@@ -1544,7 +1544,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Basel Biometric Section (BBS)</h1>
 <h4 class="author">Laurent Essioux, Dominik Heinzmann, Kaspar Rufibach, Marcel Wolbers</h4>
-<h4 class="date">22 Nov 2019</h4>
+<h4 class="date">28 Nov 2019</h4>
 
 </div>
 
@@ -1562,6 +1562,10 @@ div.tocify {
 <div id="board" class="section level2">
 <h2>Board</h2>
 <p>Give names</p>
+</div>
+<div id="newsletter" class="section level2">
+<h2>Newsletter</h2>
+<p>If you would like to receive announcements of upcoming events please send an email to xxx.</p>
 </div>
 </div>
 <div id="upcoming-events" class="section level1">
