--- a/trainings/20220913/20220913_gsd_adaptive.html
+++ b/trainings/20220913/20220913_gsd_adaptive.html
@@ -1486,14 +1486,12 @@ div.tocify {
 </div>
 <div id="documents" class="section level1">
 <h1>Documents</h1>
-<table style="width:100%;">
+<table>
 <colgroup>
-<col width="10%" />
-<col width="39%" />
-<col width="24%" />
-<col width="21%" />
-<col width="1%" />
-<col width="1%" />
+<col width="11%" />
+<col width="41%" />
+<col width="25%" />
+<col width="22%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -1501,8 +1499,6 @@ div.tocify {
 <th align="center">Title</th>
 <th align="center">Slides</th>
 <th align="center">Markdown accompanying slides</th>
-<th align="center">NA</th>
-<th align="left">NA</th>
 </tr>
 </thead>
 <tbody>
@@ -1511,40 +1507,30 @@ div.tocify {
 <td align="center">Efficient use of futility and efficacy interim analyses in group-sequential designs</td>
 <td align="center"><a href="RufibachWolbers_efficient_interims_handout.pdf">X</a></td>
 <td align="center"><a href="RufibachWolbers_efficient_interims.html">X</a></td>
-<td align="center"></td>
-<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Marc Vandemeulebroecke</td>
 <td align="center">Introduction adaptive trials &amp; sample size re-calculation</td>
 <td align="center"><a href="VandemeulebroeckeToolbox_AD_MethodsIntro.pdf">X</a></td>
 <td align="center"></td>
-<td align="center">NA</td>
-<td align="left">NA</td>
 </tr>
 <tr class="odd">
 <td align="left">Gernot Wassmer</td>
 <td align="center">Introduction to rpact</td>
 <td align="center"><a href="WassmerIntroduction%20to%20rpact.pdf">X</a></td>
 <td align="center"></td>
-<td align="center">NA</td>
-<td align="left">NA</td>
 </tr>
 <tr class="even">
 <td align="left">Gernot Wassmer</td>
 <td align="center">Closed testing principle in adaptive trials</td>
 <td align="center"><a href="WassmerClosedTestingPrinciple.pdf">X</a></td>
 <td align="center"></td>
-<td align="center">NA</td>
-<td align="left">NA</td>
 </tr>
 <tr class="odd">
 <td align="left">Marcel Wolbers</td>
 <td align="center">Multi-arm multi-stage designs</td>
 <td align="center"></td>
 <td align="center"></td>
-<td align="center">NA</td>
-<td align="left">NA</td>
 </tr>
 </tbody>
 </table>
