--- a/trainings/20220913/20220913_gsd_adaptive.html
+++ b/trainings/20220913/20220913_gsd_adaptive.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Basel Biometrics Society - Basel Biometric Society (BBS): Upcoming events</title>
+<title>Basel Biometrics Society - Advanced group-sequential and adaptive confirmatory clinical trial designs, with R practicals using rpact</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -23,22 +23,22 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="site_libs/quarto-nav/quarto-nav.js"></script>
-<script src="site_libs/quarto-nav/headroom.min.js"></script>
-<script src="site_libs/clipboard/clipboard.min.js"></script>
-<script src="site_libs/quarto-search/autocomplete.umd.js"></script>
-<script src="site_libs/quarto-search/fuse.min.js"></script>
-<script src="site_libs/quarto-search/quarto-search.js"></script>
-<meta name="quarto:offset" content="./">
-<script src="site_libs/quarto-html/quarto.js"></script>
-<script src="site_libs/quarto-html/popper.min.js"></script>
-<script src="site_libs/quarto-html/tippy.umd.min.js"></script>
-<script src="site_libs/quarto-html/anchor.min.js"></script>
-<link href="site_libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="site_libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="site_libs/bootstrap/bootstrap.min.js"></script>
-<link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="../../site_libs/quarto-nav/quarto-nav.js"></script>
+<script src="../../site_libs/quarto-nav/headroom.min.js"></script>
+<script src="../../site_libs/clipboard/clipboard.min.js"></script>
+<script src="../../site_libs/quarto-search/autocomplete.umd.js"></script>
+<script src="../../site_libs/quarto-search/fuse.min.js"></script>
+<script src="../../site_libs/quarto-search/quarto-search.js"></script>
+<meta name="quarto:offset" content="../../">
+<script src="../../site_libs/quarto-html/quarto.js"></script>
+<script src="../../site_libs/quarto-html/popper.min.js"></script>
+<script src="../../site_libs/quarto-html/tippy.umd.min.js"></script>
+<script src="../../site_libs/quarto-html/anchor.min.js"></script>
+<link href="../../site_libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="../../site_libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="../../site_libs/bootstrap/bootstrap.min.js"></script>
+<link href="../../site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="../../site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -63,14 +63,14 @@ ul.task-list li input[type="checkbox"] {
 <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="nav-fixed">
+<body class="floating nav-fixed">
 
 <div id="quarto-search-results"></div>
   <header id="quarto-header" class="headroom fixed-top">
     <nav class="navbar navbar-expand-lg navbar-dark ">
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container">
-    <a class="navbar-brand" href="./index.html">
+    <a class="navbar-brand" href="../../index.html">
     <span class="navbar-title">Basel Biometrics Society</span>
     </a>
   </div>
@@ -83,11 +83,11 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link dropdown-toggle" href="#" id="nav-menu-about-bbs" role="button" data-bs-toggle="dropdown" aria-expanded="false">About BBS</a>
     <ul class="dropdown-menu" aria-labelledby="nav-menu-about-bbs">    
         <li>
-    <a class="dropdown-item" href="./purpose.html">
+    <a class="dropdown-item" href="../../purpose.html">
  <span class="dropdown-text">Purpose</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./board.html">
+    <a class="dropdown-item" href="../../board.html">
  <span class="dropdown-text">BBS board</span></a>
   </li>  
     </ul>
@@ -96,7 +96,7 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link dropdown-toggle" href="#" id="nav-menu-upcoming-events" role="button" data-bs-toggle="dropdown" aria-expanded="false">Upcoming events</a>
     <ul class="dropdown-menu" aria-labelledby="nav-menu-upcoming-events">    
         <li>
-    <a class="dropdown-item" href="./events_upcoming.html">
+    <a class="dropdown-item" href="../../events_upcoming.html">
  <span class="dropdown-text">Announcements of upcoming events</span></a>
   </li>  
     </ul>
@@ -105,7 +105,7 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link dropdown-toggle" href="#" id="nav-menu-past-seminars" role="button" data-bs-toggle="dropdown" aria-expanded="false">Past seminars</a>
     <ul class="dropdown-menu" aria-labelledby="nav-menu-past-seminars">    
         <li>
-    <a class="dropdown-item" href="./events_past.html">
+    <a class="dropdown-item" href="../../events_past.html">
  <span class="dropdown-text">Agendas, slidedecks, and recordings of past BBS seminars</span></a>
   </li>  
     </ul>
@@ -114,16 +114,16 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link dropdown-toggle" href="#" id="nav-menu-past-trainings" role="button" data-bs-toggle="dropdown" aria-expanded="false">Past trainings</a>
     <ul class="dropdown-menu" aria-labelledby="nav-menu-past-trainings">    
         <li>
-    <a class="dropdown-item" href="./trainings_past.html">
+    <a class="dropdown-item" href="../../trainings_past.html">
  <span class="dropdown-text">Agendas, slidedecks, and recordings of past BBS training events</span></a>
   </li>  
     </ul>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="./additional_docs.html">Additional documents</a>
+    <a class="nav-link" href="../../additional_docs.html">Additional documents</a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./updates.html">Updates on this page</a>
+    <a class="nav-link" href="../../updates.html">Updates on this page</a>
   </li>  
 </ul>
               <div id="quarto-search" class="" title="Search"></div>
@@ -134,22 +134,25 @@ ul.task-list li input[type="checkbox"] {
 <!-- content -->
 <div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
-<!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">On this page</h2>
+  <nav id="quarto-sidebar" class="sidebar collapse sidebar-navigation floating overflow-auto">
+    <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">Contents</h2>
    
-  <ul>
-  <li><a href="#upcoming-events" id="toc-upcoming-events" class="nav-link active" data-scroll-target="#upcoming-events">Upcoming events</a></li>
+  <ul class="collapse">
+  <li><a href="#purpose-of-this-document" id="toc-purpose-of-this-document" class="nav-link active" data-scroll-target="#purpose-of-this-document"><span class="toc-section-number">1</span>  Purpose of this document</a></li>
+  <li><a href="#documents" id="toc-documents" class="nav-link" data-scroll-target="#documents"><span class="toc-section-number">2</span>  Documents</a></li>
   </ul>
 </nav>
+</nav>
+<!-- margin-sidebar -->
+    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Basel Biometric Society (BBS): Upcoming events</h1>
+<h1 class="title">Advanced group-sequential and adaptive confirmatory clinical trial designs, with R practicals using rpact</h1>
 </div>
 
 
@@ -163,19 +166,68 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<section id="upcoming-events" class="level1">
-<h1>Upcoming events</h1>
+<section id="purpose-of-this-document" class="level1" data-number="1">
+<h1 data-number="1"><span class="header-section-number">1</span> Purpose of this document</h1>
+<p>Materials for the BBS training <a href="https://baselbiometrics.github.io/home/docs/trainings/20220913/agenda.pdf">Advanced group-sequential and adaptive confirmatory clinical trial designs, with R practicals using rpact</a>, held in Basel on 13th September 2022 by <a href="mailto:kaspar.rufibach@roche.com">Kaspar Rufibach</a>, <a href="mailto:marc.vandemeulebroecke@novartis.com">Marc Vandemeulebroecke</a>, <a href="mailto:gernot.wassmer@rpact.com">Gernot Wassmer</a>, and <a href="mailto:marcel.wolbers@roche.com">Marcel Wolbers</a>.</p>
+</section>
+<section id="documents" class="level1" data-number="2">
+<h1 data-number="2"><span class="header-section-number">2</span> Documents</h1>
 <div class="cell">
 <div class="cell-output-display">
 <table class="table table-sm table-striped">
+<thead>
+<tr class="header">
+<th style="text-align: left;">Presenter</th>
+<th style="text-align: center;">Title</th>
+<th style="text-align: center;">Slides</th>
+<th style="text-align: center;">Markdown accompanying slides</th>
+</tr>
+</thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">No upcoming events announced yet. Check back later!</td>
+<td style="text-align: left;">Kaspar Rufibach</td>
+<td style="text-align: center;">Efficient use of futility and efficacy interim analyses in group-sequential designs</td>
+<td style="text-align: center;"><a href="RufibachWolbers_efficient_interims_handout.pdf">X</a></td>
+<td style="text-align: center;"><a href="RufibachWolbers_efficient_interims.html">X</a></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Marc Vandemeulebroecke</td>
+<td style="text-align: center;">Introduction adaptive trials &amp; sample size re-calculation</td>
+<td style="text-align: center;"><a href="VandemeulebroeckeToolbox_AD_MethodsIntro.pdf">X</a></td>
+<td style="text-align: center;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Gernot Wassmer</td>
+<td style="text-align: center;">Introduction to rpact</td>
+<td style="text-align: center;"><a href="WassmerIntroduction%20to%20rpact.pdf">X</a></td>
+<td style="text-align: center;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Gernot Wassmer</td>
+<td style="text-align: center;">Closed testing principle in adaptive trials</td>
+<td style="text-align: center;"><a href="WassmerClosedTestingPrinciple.pdf">X</a></td>
+<td style="text-align: center;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Marcel Wolbers</td>
+<td style="text-align: center;">Multi-arm multi-stage designs</td>
+<td style="text-align: center;"><a href="Wolbers_RufibachMAMS.pdf">X</a></td>
+<td style="text-align: center;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Frank Bretz and Uli Burger</td>
+<td style="text-align: center;">Adaptive trials: Some general considerations</td>
+<td style="text-align: center;"><a href="BretzBurgerGeneralConsiderations.pdf">X</a></td>
+<td style="text-align: center;"></td>
 </tr>
 </tbody>
 </table>
 </div>
 </div>
+<ul>
+<li><p><a href="BBSadaptiveCourse13Sep2022_exercises.html">Exercises</a> and <a href="BBSadaptiveCourse13Sep2022_solutions.html">solutions</a> for the entire course.</p></li>
+<li><p><a href="BBS_adaptive.zip">Download all files as .zip file</a>.</p></li>
+</ul>
 
 
 </section>
